fixed calendar visible while scrolling under navbar

--- a/app/components/bottom-sheet/styles.scss
+++ b/app/components/bottom-sheet/styles.scss
@@ -9,6 +9,7 @@
   bottom: 0;
   background-color: rgba(0,0,0,0.5);
   cursor: pointer;
+  z-index: 1;
 }
 
 .bottom-sheet {
