--- a/app/components/nav-bar/styles.scss
+++ b/app/components/nav-bar/styles.scss
@@ -1,14 +1,25 @@
 & {
   width: 100vw;
+  background-color: #f4f4f4;
 }
 nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
   border-top: 1px solid #ccc;
   box-shadow: 0px -1px 2px #ddd;
   padding: 10px;
   font-size: 1.6rem;
+  & ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    & li {
+      margin: 0;
+      padding: 0;
+    }
+  }
 }
 
 a {
